syntax = "proto3";

package order;

option go_package = "internal/order";

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (Order);
    rpc GetOrder(GetOrderRequest) returns (Order);
    rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
    rpc UpdateOrder(UpdateOrderRequest) returns (Order);
    rpc DeleteOrder(DeleteOrderRequest) returns (Order);
}

message Product {
    string id = 1;
    string name = 2;
    int32 quantity = 3;
    int64 price = 4;
}

message Order {
    string  id = 1;
    string type = 2;
    int32 customer_id = 3;
    repeated Product product = 4;
    int64 total_amount = 5;
    int64 created_at = 6;
    int64 updated_at = 7;
}

// Request
message CreateOrderRequest {
    string type = 1;
    int32 customer_id = 2;
    repeated Product product = 3;
}

message GetOrderRequest {
    string id = 1;
}

message ListOrdersRequest {
    int32 page = 1;
    int32 limit = 2;
}

message UpdateOrderRequest {
    string id = 1;
    string type = 2;
    int32 customer_id = 3;
    repeated Product product = 4;
}

message DeleteOrderRequest {
    string id = 1;
}

// Response
message ListOrdersResponse {
    repeated Order orders = 1;
}